
2007-06-xx  -  PgBouncer 1.0.9  -  ""

  = Features =

  * Database connect string enhancements:
    - Accept hostname in host=
    - Accept custom unix socket location in host=
    - Accept quoted values: password=' asd''foo'
  * Cancel pkt sent for idle connection does not drop it anymore,
    just ReadyForQuery is re-sent.
  * Print FD limits on startup.
  * More debug log messages include socket info.
  * When suspending, try to hit packet boundary ASAP.

2007-06-18  -  PgBouncer 1.0.8  -  "Undead Shovel Jutsu"

  = Fixes =

  * Fix crash in cancel packet handling. (^C from psql)

  = Features =

  * PAUSE <db>; RESUME <db>; works now.
  * Cleanup of console command parsing.
  * Disable expensive in-list assert check.

2007-04-19  -  PgBouncer 1.0.7  -  "With Vitamin A-Z"

  * Several error/notice packets with send() blocking between
    triggered assert.  Fix it by removing flushing logic altogether.
    As pgbouncer does not actively buffer anything, its not needed.
    It was a remnant from the time when buffering was pushed to
    kernel with MSG_MORE.
  * Additionally avoid calling recv() logic when sending unblocks.
  * List search code for admin_users and stats_users
    mishandled partial finds.  Fix it.
  * Standardise UNIX socket peer UID finding to getpeereid().

2007-04-12  -  PgBouncer 1.0.6  -  "Daily Dose"

  * The "Disable maintenance during the takeover" fix could
    disable maintenance altogether.  Fix it.
  * Compilation fix for FreeBSD, <sys/ucred.h> requires <sys/param.h> there.
    Thanks go to Robert Gogolok for report.

2007-04-11  -  PgBouncer 1.0.5  -  "Enough for today"

  * Fix online-restart bugs:
    - Set ->ready for idle servers.
    - Remove obsolete code from use_client_socket()
    - Disable maintenance during the takeover.

2007-04-11  -  PgBouncer 1.0.4  -  "Last 'last' bug"

  * Notice from idle server tagged server dirty.
    release_server() did not expect it.  Fix it
    by dropping them.
