@@ -3,7 +3,6 @@
 == Small stuff ==
 
  * cancel of SUSPEND/PAUSE
- * reset_command to be issued immidiately after release
  * suspend_timeout - drop stalled conns
 
 == Low-prio ==
