@@ -58,17 +58,25 @@ stats_users = stats, root
 ;   statement    - after statement finishes
 pool_mode = session
 
-; When taking idle server into use, this query is ran first.
 ;
-; Query for session pooling:
-;   ABORT; RESET ALL; SET SESSION AUTHORIZATION DEFAULT
-; Query for statement/transaction pooling:
+; Query for cleaning connection immidiately after releasing from client.
+;
+; Query for 8.3+:
+;   DISCARD ALL;
+;
+; Older versions:
+;   RESET ALL; SET SESSION AUTHORIZATION DEFAULT
+;
+server_reset_query = 
+
+;
+; When taking idle server into use, this query is ran first.
 ;   SELECT 1
-; Empty query disables the functionality
+;
 server_check_query = select 1
 
 ; If server was used more recently that this many seconds ago,
-; skip the check query.  If 0, the check query is always ran.
+; skip the check query.  Value 0 may or may not run in immidiately.
 server_check_delay = 10
 
 ;;;
