@@ -7,6 +7,7 @@
     - Accept hostname in host=
     - Accept custom unix socket location in host=
     - Accept quoted values: password=' asd''foo'
+  * server_reset_query, to be sent immidiately after release
   * Cancel pkt sent for idle connection does not drop it anymore,
     just ReadyForQuery is re-sent.
   * Print FD limits on startup.
